# crop_yield_predictor_pakistan

./: .gitignore  README.md  pyproject.toml
src/data/: districts.py  fetch_soil.py  fetch_weather.py  fetch_yield.py  test_fetch_weather.py
src/utils/: mongo_utils.py
