[project]
name = "crop-yield-punjab"
version = "0.1.0"
description = "Crop yield prediction system for Punjab, Pakistan"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pymongo[srv]>=4.6.0",
    "streamlit>=1.32.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "torch>=2.2.0",
    "tensorflow-cpu>=2.15.0",
    "openmeteo-requests>=1.1.0",
    "requests-cache>=1.1.0",
    "retry-requests>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
